Wipe the suffix _static from tbb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,28 +265,28 @@ add_custom_target(tbb_def_files DEPENDS tbb.def tbbmalloc.def)
 
 # TBB library
 if (TBB_BUILD_STATIC)
-  add_library(tbb_static STATIC ${tbb_src})
-  target_link_libraries(tbb_static PRIVATE tbb_interface)
-  target_include_directories(tbb_static INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>" "$<INSTALL_INTERFACE:${TBB_INSTALL_INCLUDE_DIR}>")
-  set_property(TARGET tbb_static APPEND_STRING PROPERTY COMPILE_FLAGS ${ENABLE_RTTI})
+  add_library(tbb STATIC ${tbb_src})
+  target_link_libraries(tbb PRIVATE tbb_interface)
+  target_include_directories(tbb INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>" "$<INSTALL_INTERFACE:${TBB_INSTALL_INCLUDE_DIR}>")
+  set_property(TARGET tbb APPEND_STRING PROPERTY COMPILE_FLAGS ${ENABLE_RTTI})
   if (TBB_INSTALL_TARGETS)
-    install(TARGETS tbb_static ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
+    install(TARGETS tbb ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
   endif()
 
-  target_compile_definitions(tbb_static
+  target_compile_definitions(tbb
     PRIVATE
       -D__TBB_BUILD=1
       -D__TBB_DYNAMIC_LOAD_ENABLED=0
       -D__TBB_SOURCE_DIRECTLY_INCLUDED=1)
 
   if (MSVC)
-    target_compile_definitions(tbb_static
+    target_compile_definitions(tbb
       PUBLIC -D__TBB_NO_IMPLICIT_LINKAGE=1
       PRIVATE -D_CRT_SECURE_NO_WARNINGS)
   endif()
 
   if (UNIX AND NOT APPLE)
-    target_link_libraries(tbb_static PUBLIC pthread dl)
+    target_link_libraries(tbb PUBLIC pthread dl)
   endif()
 endif()
 
@@ -348,17 +348,17 @@ endif()
 if(TBB_BUILD_TBBMALLOC)
   # TBB malloc library
   if (TBB_BUILD_STATIC)
-    add_library(tbbmalloc_static STATIC ${tbbmalloc_static_src})
-    target_link_libraries(tbbmalloc_static PRIVATE tbb_interface)
-    set_property(TARGET tbbmalloc_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBBMALLOC_BUILD=1")
-    set_property(TARGET tbbmalloc_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_DYNAMIC_LOAD_ENABLED=0")
-    set_property(TARGET tbbmalloc_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_SOURCE_DIRECTLY_INCLUDED=1")
-    set_property(TARGET tbbmalloc_static APPEND_STRING PROPERTY COMPILE_FLAGS ${DISABLE_RTTI})
+    add_library(tbbmalloc STATIC ${tbbmalloc_static_src})
+    target_link_libraries(tbbmalloc PRIVATE tbb_interface)
+    set_property(TARGET tbbmalloc APPEND PROPERTY COMPILE_DEFINITIONS "__TBBMALLOC_BUILD=1")
+    set_property(TARGET tbbmalloc APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_DYNAMIC_LOAD_ENABLED=0")
+    set_property(TARGET tbbmalloc APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_SOURCE_DIRECTLY_INCLUDED=1")
+    set_property(TARGET tbbmalloc APPEND_STRING PROPERTY COMPILE_FLAGS ${DISABLE_RTTI})
     if (MSVC)
-      target_compile_definitions(tbbmalloc_static PUBLIC __TBB_NO_IMPLICIT_LINKAGE=1 __TBBMALLOC_NO_IMPLICIT_LINKAGE=1)
+      target_compile_definitions(tbbmalloc PUBLIC __TBB_NO_IMPLICIT_LINKAGE=1 __TBBMALLOC_NO_IMPLICIT_LINKAGE=1)
     endif()
     if (TBB_INSTALL_TARGETS)
-      install(TARGETS tbbmalloc_static ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
+      install(TARGETS tbbmalloc ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
     endif()
   endif()
 
@@ -399,14 +399,14 @@ endif()
 if(TBB_BUILD_TBBMALLOC_PROXY)
   # TBB malloc proxy library
   if (TBB_BUILD_STATIC)
-    add_library(tbbmalloc_proxy_static STATIC ${tbbmalloc_proxy_src})
-    target_link_libraries(tbbmalloc_proxy_static PRIVATE tbb_interface)
-    set_property(TARGET tbbmalloc_proxy_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBBMALLOC_BUILD=1")
-    set_property(TARGET tbbmalloc_proxy_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_DYNAMIC_LOAD_ENABLED=0")
-    set_property(TARGET tbbmalloc_proxy_static APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_SOURCE_DIRECTLY_INCLUDED=1")
-    set_property(TARGET tbbmalloc_proxy_static APPEND_STRING PROPERTY COMPILE_FLAGS ${DISABLE_RTTI})
+    add_library(tbbmalloc_proxy STATIC ${tbbmalloc_proxy_src})
+    target_link_libraries(tbbmalloc_proxy PRIVATE tbb_interface)
+    set_property(TARGET tbbmalloc_proxy APPEND PROPERTY COMPILE_DEFINITIONS "__TBBMALLOC_BUILD=1")
+    set_property(TARGET tbbmalloc_proxy APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_DYNAMIC_LOAD_ENABLED=0")
+    set_property(TARGET tbbmalloc_proxy APPEND PROPERTY COMPILE_DEFINITIONS "__TBB_SOURCE_DIRECTLY_INCLUDED=1")
+    set_property(TARGET tbbmalloc_proxy APPEND_STRING PROPERTY COMPILE_FLAGS ${DISABLE_RTTI})
     if (TBB_INSTALL_TARGETS)
-      install(TARGETS tbbmalloc_proxy_static ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
+      install(TARGETS tbbmalloc_proxy ARCHIVE DESTINATION ${TBB_INSTALL_ARCHIVE_DIR})
     endif()
   endif()
 
@@ -490,8 +490,8 @@ if (TBB_BUILD_TESTS)
       target_link_libraries (${full_testname} PRIVATE tbb tbbmalloc)
       target_compile_definitions (${full_testname} PRIVATE __TBB_LIB_NAME=tbb)
     else ()
-      target_link_libraries (${full_testname} PRIVATE tbb_static tbbmalloc_static)
-      target_compile_definitions (${full_testname} PRIVATE __TBB_LIB_NAME=tbb_static)
+      target_link_libraries (${full_testname} PRIVATE tbb tbbmalloc)
+      target_compile_definitions (${full_testname} PRIVATE __TBB_LIB_NAME=tbb)
     endif ()
     if (LIBRT_LIBRARIES)
       target_link_libraries (${full_testname} PRIVATE ${LIBRT_LIBRARIES})
